src/css/card.css
#labels {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 1rem;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 8.5cm;
  height: 6cm;
  border: 1px solid #ccc;
  box-sizing: border-box;
  padding: .4rem .7rem;
  break-inside: avoid;
  font-size: .8rem;
}
.card__header {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 1.8rem;
}
.card__body {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.card__footer {
  display: flex;
  justify-content: space-between;
  > * {
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
    gap: .2rem;
  }
}
.card__name {
  font-size: 1.6rem;
  font-weight: 500;
}
.card__brand {
  font-size: 1.2rem;
  font-weight: 500;
}
.card__pvp {
  font-size: 3.5rem;
  font-weight: 800;
}
.card__unit {
  font-size: 1.3rem;
}
.card__checkbox {
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #ccc;
  height: 1rem;
  width: 1rem;
}

